--- a/style.css
+++ b/style.css
@@ -59,6 +59,9 @@ body{
 }
 
 @media screen and (max-width: 425px) {
+    body{
+        background: black;
+    }
     .slider{
         width: 70%;
     }
